# compliance-intake-service

compliance-intake-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
compliance-intake-service/app/: audit.py  config.py  dependencies.py  main.py  models.py  screening.py  service.py  storage.py
compliance-intake-service/app/data/: watchlist.json
compliance-intake-service/infra/: README.md
compliance-intake-service/scripts/: demo.py
compliance-intake-service/tests/: conftest.py  test_api.py  test_screening.py  test_service.py
