[project]
name = "compliance-intake-service"
version = "1.0.0"
description = "Demo KYC/AML intake & screening service (FastAPI + boto3)"
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI intentionally uses Depends()/Form()/File() as argument defaults.
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
